<resources>
    <string name="app_name">SingleActivity</string>

    <!--DSearchImagesFragment-->
    <string name="search_image_frag_title">Búsqueda de imágenes</string>

    <!--SearchImages Errores-->
    <string name="error_default">Usa la lupa para buscar imágenes por un texto relacionado.</string>

    <!--SearchImages item-->
    <string name="search_image_author">Autor</string>
    <string name="search_image_title">Titúlo</string>
    <string name="item_author">Por %1$s</string>

    <!--Menu-->
    <string name="menu_search">Buscar</string>

    <!--DetailImageFragment-->
    <string name="detail_image_title">Detalle %1$s</string>
    <string name="detail_image_date">Fecha</string>
    <string name="detail_image_description">Descripción</string>
    <string name="search_image_pagination">Página %1$s</string>
    <string name="search_image_pagination2">Pág %1$s/%2$s</string>
    <string name="search_image_elements">Imágen %1$s/%2$s</string>
    <string name="share_button">COMPARTIR</string>
    <string name="share_image_title">Compartir la imagen con</string>

    <!--ShareImage Errores-->
    <string name="share_image_error">Ha ocurrido un error, por favor inténtalo de nuevo más tarde</string>

    <!--Menu-->
    <string name="biometric_login_off">Desactivar login biometríco</string>
    <string name="biometric_login_on">Activar login biometríco</string>
    <string name="dark_theme_off">Desactivar tema oscuro</string>
    <string name="dark_theme_on">Activar tema oscuro</string>
    <string name="app_settings">Ajustes de la app</string>
    <string name="about">Acerca de</string>

    <!--BiometricPrompt-->
    <string name="biometric_title">@string/app_name</string>
    <string name="biometric_subtitle">Credenciales biometrícas necesarias</string>
    <string name="biometric_description">Sí algo no funciona bien, puedes usar el método alternativo de más abajo</string>
    <string name="biometric_cancel"> Salir</string>
    <string name="biometric_success">Todo correcto, cargando…</string>
    <string name="biometric_error_unknown">Ha ocurrido un error, vuelve a intentarlo más tarde</string>
    <string name="biometric_error_no_hardware_supported">No hay sensores biometrícos en el dispositivoe</string>
    <string name="biometric_error_no_hardware_available">Los sensores biometrícos no están disponibles en éste momento</string>
    <string name="biometric_error_no_auth_enrolled">No hay ningúna credencial biometríca enlazada aún</string>

    <!--SpeechToText-->
    <string name="speech_prompt">Di algo</string>

    <string name="lumix_media">Lux media: %1$s</string>

</resources>
