<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_night_mode"
        android:title="@string/dark_theme_off"
        android:orderInCategory="200"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_app_settings"
        android:title="@string/app_settings"
        android:orderInCategory="300"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:visible="false"
        android:orderInCategory="400"
        app:showAsAction="never" />
</menu>
