<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gray_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/gray_light"
        android:minHeight="@dimen/image_minHeight_detail">

        <RelativeLayout
            android:id="@+id/image_thumbnail_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/x_medium"
                android:adjustViewBounds="true"
                android:background="@null"
                android:maxHeight="@dimen/image_maxHeight_detail"
                android:minHeight="@dimen/image_minHeight_detail"
                app:srcCompat="@drawable/ic_photo" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_card_layout_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_thumbnail_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_card_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/x_medium"
                android:layout_marginEnd="@dimen/x_medium"
                android:layout_marginBottom="@dimen/medium"
                android:padding="@dimen/medium"
                app:elevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/image_author_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/large"
                        android:layout_marginTop="@dimen/large"
                        android:layout_marginEnd="@dimen/large"
                        android:text="@string/search_image_author"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/gray_medium"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/image_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_author_title"
                        android:layout_alignStart="@+id/image_author_title"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginEnd="@dimen/large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/text_body2"
                        android:textSize="@dimen/text_medium"
                        tools:text="@string/search_image_author" />

                    <TextView
                        android:id="@+id/image_title_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_author"
                        android:layout_alignStart="@+id/image_author"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginEnd="16dp"
                        android:text="@string/search_image_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/gray_medium"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/image_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_title_title"
                        android:layout_alignStart="@+id/image_author_title"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginEnd="@dimen/large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/text_body2"
                        android:textSize="@dimen/text_medium"
                        tools:text="@string/search_image_title" />

                    <TextView
                        android:id="@+id/image_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_title"
                        android:layout_alignStart="@+id/image_author_title"
                        android:layout_marginTop="@dimen/medium"
                        android:layout_marginEnd="@dimen/large"
                        android:ellipsize="end"
                        android:text="@string/detail_image_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/gray_medium"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/image_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_date_title"
                        android:layout_alignStart="@+id/image_author_title"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginBottom="@dimen/medium"
                        android:layout_marginEnd="@dimen/large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/text_body2"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/image_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_date"
                        android:layout_alignStart="@+id/image_author_title"
                        android:layout_marginEnd="@dimen/large"
                        android:text="@string/detail_image_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/gray_medium"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/image_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_description_title"
                        android:layout_alignStart="@+id/image_title_title"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginEnd="@dimen/large"
                        android:layout_marginBottom="@dimen/medium"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/text_body2"
                        android:textSize="@dimen/text_medium" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_thumbnail_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/x_large"
            android:layout_marginBottom="@dimen/neg_x_large"
            android:animateLayoutChanges="true"
            android:foregroundGravity="bottom"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/colorAccent"
            app:elevation="@dimen/medium"
            app:rippleColor="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal"
                android:padding="@dimen/small">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/x_medium"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_share" />

                <TextView
                    android:id="@+id/text_pagination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/x_medium"
                    android:text="@string/share_button"
                    android:textStyle="bold"
                    android:textColor="@color/share_button"
                    app:iconTint="@color/colorPrimary" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>