<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/gray_light">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_search_images" />

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_pag_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/x_medium"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_fab"
        android:foregroundGravity="center"
        app:elevation="@dimen/x_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fab_pagination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium"
                android:text="@string/search_image_pagination"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/x_medium"
        android:animateLayoutChanges="true"
        android:clickable="false"
        android:text="@string/search_image_pagination"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_small"
        android:visibility="gone"
        app:background="@drawable/bg_fab"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="@color/colorAccent_unfocused"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        tools:ignore="RelativeOverlap" />

    <RelativeLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/gray_light"
        android:padding="@dimen/large">

        <ImageView
            android:id="@+id/image_error"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:tint="@color/gray_medium"
            app:srcCompat="@drawable/ic_search" />

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_error"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/large"
            android:text="@string/error_default"
            android:textSize="@dimen/text_large" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/empty_state"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_progress"
        android:indeterminate="true"
        android:padding="@dimen/medium"
        android:theme="@style/MyProgressBar"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_element_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/medium"
        android:layout_marginEnd="@dimen/x_medium"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_fab"
        android:foregroundGravity="center"
        app:elevation="@dimen/x_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fab_elements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/medium"
                android:text="@string/search_image_elements"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/x_medium"
        android:layout_marginBottom="@dimen/medium"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_fab"
        android:clickable="false"
        android:text="@string/search_image_elements"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_small"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="0dp"
        app:rippleColor="@color/colorAccent_unfocused"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>